--- a/desafios/desafio-014/tabela.html
+++ b/desafios/desafio-014/tabela.html
@@ -24,6 +24,7 @@
             background-color: gray;
             color: white;
             text-align: left;
+            background-size: ;
         }
 
     </style>
